# Numerical_integration

./: .gitignore  .test.py.swp  README.md  euler_backwards.py  euler_de.py  euler_implicit.py  plot.py  pyproject.toml  setup.cfg  test.py
example/: hamiltonian.py  lorenz.hdf5
inputs/: example.py  example.yaml
outputs/: example.csv  test_csv.csv  test_hdf5.hdf5  test_npy.npy
src/numinter/: .plot.py.swp  cli.py  cli_janos.py  custom_errors.py  equation.py  euler_de.py  euler_explicit.py  euler_implicit.py  euler_implicit_leo.py.py  example.py  example_exponential.py  example_hamiltonian.py  example_lorenz.py  io.py  locate.py  parse.py  plot.py  reading.py  save_data.py
