[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "numinter"
version = "0.0.1"
authors = [
  { name="Richard Johansson", email="richard.johansson@irf.se" },
]
description = "Numerical intergrator for ODE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "sympy",
    "h5py"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
numinter = "numinter.cli:main"

[project.urls]
Homepage = "https://github.com/Omnitok/Numerical_integration"
